Add NBT Jackson serializer for Biome definitions